add assert package as dev dependency

--- a/js/package.json
+++ b/js/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/smarties-dojo/diffArray/issues"
   },
-  "homepage": "https://github.com/smarties-dojo/diffArray#readme"
+  "homepage": "https://github.com/smarties-dojo/diffArray#readme",
+  "devDependencies": {
+    "node-assertthat": "^0.2.3"
+  }
 }
